flex sistem in about page working

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,10 +37,10 @@
                 <h2>Grow box project</h2>
                 <div class="flexContainer">
                     <div class="col col30">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero.</p>
-                        <!-- <img class="imgProject" src="../img/grow2.jpg" alt="grow Project Arduino" sizes="" srcset=""> -->
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero.</p> -->
+                        <img class="imgProject" src="../img/grow2.jpg" alt="grow Project Arduino" sizes="" srcset="">
                     </div>
-                    <div class="text col col70">
+                    <div class="col col70">
                         <p> The grow Box project is a way of helping people to grow heath food indoors. even if someone dont
                             have a lot of time or skils in growing anything.
                             The project its a sistem that monitore important arpects of a plant cicle life. Showing to the user
@@ -51,11 +51,16 @@
                             Also have auto pilot mode, where you just need to conect the growBox and the water resevoair and the sistem will water the plant exatly when is needed.
                         </p>
                     </div>
+                    <!-- <div class="col col30">
+                       The grow Box project is a way of helping people to grow heath food indoors. even if someone dont
+                                    have a lot of time or skils in growing anything.
+                                    The project i
+                    </div> -->
                 </div>
             <!-- </div> row -->
             <div class="">
 
-                <h3>teckinical stuff</h3>
+                <h3>Technical stuff</h3>
                 <div class="flexContainer">
                     <div class="col col50">
                         <p>
