new Home page, change in the css organization

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Andre Tavares</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/461864901a.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/navBar.css">
     <link rel="stylesheet" href="css/style.css">
@@ -24,14 +25,34 @@
             </ul>
         </nav>
         <div>
-            <h1>Lorem, ipsum dolor.</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
+            <h1> <span class="green"> The Grow Box </span></h1>
+            <h2>The IoT Solution for Growing Indoors</h2>
             <a class="button btnAbout">Lorem</a>
         </div>
 
     </header>
     <main>
-
+        <section class="sectionShow">
+            <div class="flexContainer">
+                <div class="showItem" >
+                    <i class="fas fa-seedling fa-3x"></i>
+                    <h3> <span class="green">Grow</span> Your won Vegetables</h3>
+                </div>
+                <div class="showItem">
+                    <i class="fas fa-heartbeat fa-3x"></i>
+                    <h3><span class="green">Heath</span> Food</h3>
+                </div>
+                <div class="showItem">
+                    <!-- <i class="fas fa-globe fa-3x"></i> -->
+                    <i class="fas fa-chart-line fa-3x"></i>
+                    <h3>Monitore Your <span class="green">plant</span></h3>
+                </div>
+                <div class="showItem">
+                        <i class="fas fa-tint fa-3x"></i>
+                    <h3><span class="green">Automate</span> the boring Part</h3>
+                </div>
+            </div>
+        </section>
         <section id="home" class="sectionContainer">
             <h2>Home</h2>
             <h2>My personal website/ Portifolio</h2>
