--- a/pages/about.html
+++ b/pages/about.html
@@ -24,9 +24,9 @@
             </ul>
         </nav>
         <div>
-            <h1>Lorem, ipsum dolor.</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <a class="button btnAbout">Lorem</a>
+            <h1>About The Grow Box</h1>
+            <h3>The begining</h3>
+            <!-- <a class="button btnABout">Lorem</a> -->
         </div>
 
     </header>
