--- a/index.html
+++ b/index.html
@@ -53,9 +53,31 @@
                 </div>
             </div>
         </section>
-        <section id="home" class="sectionContainer">
-            <h2>Home</h2>
-            <h2>My personal website/ Portifolio</h2>
+        <section id="home" class="sectionHome">
+            <h2>The Grow Box</h2>
+            <h3>My personal website/ Portifolio</h3>
+            <div class="flexContainer">
+                <div class="col col30">
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero.</p> -->
+                    <img class="imgProject" src="../img/grow2.jpg" alt="grow Project Arduino" sizes="" srcset="">
+                </div>
+                <div class="col col70">
+                    <p> The grow Box project is a way of helping people to grow heath food indoors. even if someone dont
+                        have a lot of time or skils in growing anything.
+                        The project its a sistem that monitore important arpects of a plant cicle life. Showing to the user
+                        in a simple and organized way. So you have a precise way of knowing how is your crop. You can see The humidity of the air, the moisture of the
+                        soil, temoerature of the space, and how much ligth the plant is haciving. Those are the most importants parameters in any plant life.
+                        For Those with more interesin in deep understand, all the data recorded from the plant and enviroment is avaible online in a precise grafh.
+                        
+                        Also have auto pilot mode, where you just need to conect the growBox and the water resevoair and the sistem will water the plant exatly when is needed.
+                    </p>
+                </div>
+                <!-- <div class="col col30">
+                    The grow Box project is a way of helping people to grow heath food indoors. even if someone dont
+                                have a lot of time or skils in growing anything.
+                                The project i
+                </div> -->
+            </div>
             <div class="content">
                 <div class="img">
                     
