--- a/pages/order.html
+++ b/pages/order.html
@@ -44,23 +44,25 @@
             <!-- personal info -->
             
             <section class="survey">
+                <div>
+                    Price = $500
+                </div>
                 <form id="order" method="GET" action="">
-                    <ul class="form-order">
-                        <li>
-                            <label for="quantity">Quantity:</label>
-                            <select name="quantity" id="quantity">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                            </select>
-                        </li>
-                    </ul>
+                    <div class="form-order">
+                    <label for="quantity">Quantity:</label>
+                    <select name="quantity" id="quantity">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                    </select>
+                    <input type="button" value="Order">
+                    </div>
                 </form>
             </section>
             <section class="survey">
