Remove padding from main...

--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
                 </div>
             </div>
         </section>
+
+        <section class="sectionIntro">
+            <div>
+                <ul>
+                    <li>Do you want to grow your plants, but you live in a apartament or small house?</li>
+                    <li>Do you want to eat heath food without GMO, BCO, UFO and other Abbreviations that YOU dont know what means?</li>
+                    <li>Wanna have the experiance of growing a plant but have no experience?</li>
+                    <li>You have already tryed and kill several poor little plants before?</li>
+                    <li> you already have a plant or a grow, but it take so much of your time?</li>
+                    <li>You are a free spirit and love to travel, but your plants roots you home?</li>
+                    <li>You like plants but dont remember to water them?</li>
+                    <li>You are a geek and want to anilize the data from your plants?</li>
+                </ul>
+                <div class="ans">
+                    <p class="ansText">If You answered <span class="green">YES</span> to any of those questions.</p>
+                    <p class="ansText"><span class="green">The Grow Box</span> Is for You</p>
+                </div>
+
+                
+        </div>
+        <div>
+
+        </div>
+
+        </section>
+
+        
         <section id="home" class="sectionHome">
             <h2>The Grow Box</h2>
             <h3>My personal website/ Portifolio</h3>
