--- a/pages/about.html
+++ b/pages/about.html
@@ -31,7 +31,7 @@
 
     </header>
     <main>
-        <section class="sectionContainer">
+        <section class="sectionAbout">
             <!-- <div class=""> -->
                 <h2>About</h2>
                 <h2>Grow box project</h2>
