--- a/pages/about.html
+++ b/pages/about.html
@@ -24,8 +24,8 @@
             </ul>
         </nav>
         <div>
-            <h1>About The Grow Box</h1>
-            <h3>The begining</h3>
+            <h1>Grow Box</h1>
+            <h2>The Project</h2>
             <!-- <a class="button btnABout">Lorem</a> -->
         </div>
 
@@ -33,8 +33,8 @@
     <main>
         <section class="sectionAbout">
             <!-- <div class=""> -->
-                <h2>About</h2>
-                <h2>Grow box project</h2>
+                <!-- <h2>About</h2> -->
+                <h2>The Grow box project</h2>
                 <div class="flexContainer">
                     <div class="col col30">
                         <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero.</p> -->
@@ -64,7 +64,7 @@
                 <div class="flexContainer">
                     <div class="col col50">
                         <p>
-                            Is made using an Arduino Leonardo and ESP 8266 wifi module to send the data to Things to speak.
+                            Build using an Arduino Leonardo and ESP 8266 wifi module to send the data to Things to speak.
                             The data is colected from arduino compatible sensors
                         </p>
                     </div>
