--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div>
             <h1> <span class="green"> The Grow Box </span></h1>
             <h2>The IoT Solution for Growing Indoors</h2>
-            <a class="button btnAbout">See more</a>
+            <a class="button btnAbout" href="#intro">See more</a>
         </div>
 
     </header>
@@ -56,7 +56,7 @@
             </div>
         </section>
 
-        <section class="sectionIntro">
+        <section id="intro" class="sectionIntro">
             <div class="contentQuestions">
                 <ul>
                     <li>Do you want to grow your plants, but you live in a apartament or small house?</li>
@@ -101,7 +101,7 @@
             <div class="contentHome">
 
                 <h2>The Grow Box</h2>
-                <h3>The grow box System works in 3   diferent levels</h3>
+                <h3>The grow box System works in 3 diferent levels</h3>
                 <ol>
                     <li>Monitore your plant Localy
                         <ul>
