--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,9 @@
                         </p>
                     </div>
                     <div class="col col50">
+                    <div>
 
+                        
                         <h3>Components</h3>
                         <ul>
                             <li>Arduino Leonardo</li>
@@ -81,6 +83,7 @@
                             <li>12V pump</li>
                             <li>LCD display</li>
                         </ul>
+                    </div>
                         
                     </div>
                 </div>
