--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,6 +53,6 @@
     <footer class="mainFooter">
         <p>Developed by  <a href="https://www.linkedin.com/in/andre--tavares" target="_blank" >Andre Tavares</a> </p>
     </footer>
-    <script src="../js/navbar.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
