--- a/pages/order.html
+++ b/pages/order.html
@@ -113,7 +113,7 @@
         <p>Developed by <a href="https://www.linkedin.com/in/andre--tavares" target="_blank">Andre Tavares</a> </p>
         <!-- <a href="https://www.linkedin.com/in/andre--tavares" target="_blank" ><i class="fa fa-linkedin"></i></a> -->
     </footer>
-    <script src="../js/navbar.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
