--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </p>
         <!-- <a href="https://www.linkedin.com/in/andre--tavares" target="_blank" ><i class="fa fa-linkedin"></i></a> -->
     </footer>
-    <script src="js/navbar.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
