--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/order.html">Order</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="pages/system.html">System</a></li>
                 <li><a href="javascript:void(0)" class="icon" onclick="toggle()"> <i class="fa fa-bars"></i></a></li>
                 <!-- <li> <a href="https://www.linkedin.com/in/andre--tavares" target="_blank" ><i class="fa fa-linkedin"></i></a> </li> -->
                 <!-- <li> <a href="http://" target="_blank" >link</a> </li> -->
@@ -47,7 +48,7 @@
                 <div class="showItem">
                     <!-- <i class="fas fa-globe fa-3x"></i> -->
                     <i class="fas fa-chart-line fa-3x"></i>
-                    <h3>Monitore Your <span class="green">plant</span></h3>
+                    <h3>Monitor Your <span class="green">plant</span></h3>
                 </div>
                 <div class="showItem">
                     <i class="fas fa-tint fa-3x"></i>
@@ -59,40 +60,21 @@
         <section id="intro" class="sectionIntro">
             <div class="contentQuestions">
                 <ul>
-                    <li>Do you want to grow your plants, but you live in a apartament or small house?</li>
+                    <li>Do you want to grow your plants, but you live in a apartment or small house?</li>
                     <li>Do you want to eat heath food without GMO, BCO, UFO and other Abbreviations that YOU dont know
                         what means?</li>
-                    <li>Wanna have the experiance of growing a plant but have no experience?</li>
-                    <li>You have already tryed and kill several poor little plants before?</li>
-                    <li> you already have a plant or a grow, but it take so much of your time?</li>
+                    <li>Want to grow a plant but have no experience?</li>
+                    <li>You have already tried and kill several poor little plants before?</li>
+                    <li>You already have a plant or a grow, but it take so much of your time?</li>
                     <li>You are a free spirit and love to travel, but your plants roots you home?</li>
                     <li>You like plants but dont remember to water them?</li>
-                    <li>You are a geek and want to anilize the data from your plants?</li>
+                    <li>You are a geek and want to analize the data from your plants?</li>
                 </ul>
                 <div class="ans">
                     <p class="ansText">If You answered <span class="green">YES</span> to any of those questions.</p>
                     <p class="ansText"><span class="green">The Grow Box</span> Is for You</p>
                 </div>
             </div>
-            <!-- <div>
-                <h3>The Grow Box</h3>
-                <p>The grow box is a Sistem that work in diferent levels</p>
-                <ol>
-                    <li>Monitore your plant Localy
-                        <ul>
-                            <li>The box has a LCD display that shows important data from your plant:</li>
-                            <li>Check Moisture, humidity, temperature</li>
-                        </ul>
-                    </li>
-                    <li>Have acces online whereever you are
-                        <ul>
-                            <li>The box Has connections to wifi so you can check how is you plant:</li>
-                            <li>Check Moisture, humidity, temperature</li>
-                        </ul>
-                    </li>
-
-                </ol>
-            </div> -->
 
         </section>
 
@@ -101,26 +83,26 @@
             <div class="contentHome">
 
                 <h2>The Grow Box</h2>
-                <h3>The grow box System works in 3 diferent levels</h3>
+                <h3>The grow box System works in 3 different levels</h3>
                 <ol>
-                    <li>Monitore your plant Localy
+                    <li>Monitor your plant Locally
                         <ul>
                             <li>The box has a LCD display that shows important data from your plant:</li>
                             <li>Check Moisture, humidity, temperature</li>
                         </ul>
                     </li>
-                    <li>Have acces online whereever you are
+                    <li>Have access online wherever you are
                         <ul>
-                            <li>The box Has connections to wifi so you can check how is you plant:</li>
+                            <li>The box Has connections to wi-fi so you can check how is you plant:</li>
                             <li>Check Moisture, humidity, temperature</li>
                             <li>recorded data so you can analize</li>
                         </ul>
                     </li>
                     <li>Automate the irrigation process
                         <ul>
-                            <li>The box can water your plant exatly when it need</li>
-                            <li>Based on the redings the box can pum water from the resevoair</li>
-                            <li>Your job is only to fill the resevoair when its empity, it can take 4 weeks</li>
+                            <li>The box can water your plant exactly when it need</li>
+                            <li>Based on the readings the box can pum water from the reservoir</li>
+                            <li>Your job is only to fill the reservoir when its empty, it can take 4 weeks</li>
                         </ul>
                     </li>
                     
