--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Andre Tavares</title>
+    <title>The Grow Box Project</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/navBar.css">
@@ -18,6 +18,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="order.html">Order</a></li>
                 <li><a href="contact.html"class="active">Contact</a></li>
+                <li><a href="system.html">System</a></li>
                 <li><a href="javascript:void(0)" class = "icon" onclick="toggle()"> <i class="fa fa-bars"></i></a></li>
             </ul>
         </nav>
