--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header headerHome">
         <nav>
             <ul id="topNavId" class="topNav">
-                <li><a href="#home" class="active">Home</a></li>
+                <li><a href="#homeHeader" class="active">Home</a></li>
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/order.html">Order</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
@@ -27,7 +27,7 @@
                 <!-- <li> <a href="http://" target="_blank" >link</a> </li> -->
             </ul>
         </nav>
-        <div>
+        <div id="homeHeader">
             <h1> <span class="green"> The Grow Box </span></h1>
             <h2>The IoT Solution for Growing Indoors</h2>
             <a class="button btnAbout" href="#intro">See more</a>
@@ -79,7 +79,7 @@
         </section>
 
 
-        <section id="home" class="sectionHome">
+        <section class="sectionHome">
             <div class="contentHome">
 
                 <h2>The Grow Box</h2>
@@ -87,22 +87,22 @@
                 <ol>
                     <li>Monitor your plant Locally
                         <ul>
-                            <li>The box has a LCD display that shows important data from your plant:</li>
-                            <li>Check Moisture, humidity, temperature</li>
+                            <li>The box has a LCD display that shows important data from your plant like:</li>
+                            <li>Moisture of the soil, humidity, temperature and quantity of light</li>
                         </ul>
                     </li>
-                    <li>Have access online wherever you are
+                    <li>Access data online wherever you are
                         <ul>
-                            <li>The box Has connections to wi-fi so you can check how is you plant:</li>
-                            <li>Check Moisture, humidity, temperature</li>
-                            <li>recorded data so you can analize</li>
+                            <li>The box Has connection to wi-fi so you can check how is you plant:</li>
+                            <li>The sensors update every minute </li>
+                            <li>All data is recorded so you can analize if you want</li>
                         </ul>
                     </li>
                     <li>Automate the irrigation process
                         <ul>
                             <li>The box can water your plant exactly when it need</li>
                             <li>Based on the readings the box can pum water from the reservoir</li>
-                            <li>Your job is only to fill the reservoir when its empty, it can take 4 weeks</li>
+                            <li>Your job is only to fill the reservoir when its empty, once a month</li>
                         </ul>
                     </li>
                     
