--- a/pages/about.html
+++ b/pages/about.html
@@ -38,8 +38,10 @@
             <h2>The Grow box project</h2>
             <div class="flexContainer">
                 <div class="col col30">
-                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero.</p> -->
-                    <img class="imgProject" src="../img/grow2.jpg" alt="grow Project Arduino" sizes="" srcset="">
+                    <figure>
+                        <img class="imgProject" src="../img/grow2.jpg" alt="grow Project Arduino" sizes="" srcset="">
+                        <figcaption>Prototype for Arduino class</figcaption>
+                    </figure>
                 </div>
                 <div class="col col70">
                     <p>
@@ -68,9 +70,8 @@
             </div>
             <!-- </div> row -->
             <div class="">
-
                 <h3>Technical stuff</h3>
-                <div class="flexContainer">
+                <div class="flexContainer technical">
                     <div class="col col50">
                         <p>
                             Created using an Arduino Leonardo and ESP 8266 wi-fi module to send the data to Things speak.
