--- a/pages/system.html
+++ b/pages/system.html
@@ -35,28 +35,22 @@
         <section class="sectionAbout">
             <!-- <div class=""> -->
                 <!-- <h2>About</h2> -->
-                <h2>The Grow box project</h2>
+                <h2>This is a preview of the online system</h2>
                 <div class="flexContainer">
                     <div class="col col30">
-                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero.</p> -->
-                        <img class="imgProject" src="../img/growPresentation.jpg" alt="grow Project Arduino" sizes="" srcset="">
+                        <figure>
+                            <img class="imgProject" src="../img/growPresentation.jpg" alt="grow Project Arduino" sizes="" srcset="">
+                            <figcaption>Presentation of prototype for Arduino class</figcaption>
+                        </figure>
+
                     </div>
                     <div class="col col70">
-                        <p> The grow Box project is a way of helping people to grow heath food indoors. even if someone dont
-                            have a lot of time or skils in growing anything.
-                            The project its a sistem that monitore important arpects of a plant cicle life. Showing to the user
-                            in a simple and organized way. So you have a precise way of knowing how is your crop. You can see The humidity of the air, the moisture of the
-                            soil, temoerature of the space, and how much ligth the plant is haciving. Those are the most importants parameters in any plant life.
-                            For Those with more interesin in deep understand, all the data recorded from the plant and enviroment is avaible online in a precise grafh.
-                            
-                            Also have auto pilot mode, where you just need to conect the growBox and the water resevoair and the sistem will water the plant exatly when is needed.
+                        <p> 
+                            Those graph below are being transmitted live from a plant using the first prototype of the grow box project.
+                            The System use the thingspeak.com API to visualize and store all the data generate by the sensors.
+                                      
                         </p>
                     </div>
-                    <!-- <div class="col col30">
-                       The grow Box project is a way of helping people to grow heath food indoors. even if someone dont
-                                    have a lot of time or skils in growing anything.
-                                    The project i
-                    </div> -->
                 </div>
             <!-- </div> row -->
             <div class="">
