grammar fix, by poke

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <div class="flexContainer">
                 <div class="showItem">
                     <i class="fas fa-seedling fa-3x"></i>
-                    <h3> <span class="green">Grow</span> Your won Vegetables</h3>
+                    <h3> <span class="green">Grow</span> Your own Vegetables</h3>
                 </div>
                 <div class="showItem">
                     <i class="fas fa-heartbeat fa-3x"></i>
-                    <h3><span class="green">Heath</span> Food</h3>
+                    <h3><span class="green">Healthy</span> Food</h3>
                 </div>
                 <div class="showItem">
                     <!-- <i class="fas fa-globe fa-3x"></i> -->
@@ -61,13 +61,13 @@
             <div class="contentQuestions">
                 <ul>
                     <li>Do you want to grow your plants, but you live in a apartment or small house?</li>
-                    <li>Do you want to eat heath food without GMO, BCO, UFO and other Abbreviations that YOU dont know
-                        what means?</li>
-                    <li>Want to grow a plant but have no experience?</li>
-                    <li>You have already tried and kill several poor little plants before?</li>
-                    <li>You already have a plant or a grow, but it take so much of your time?</li>
-                    <li>You are a free spirit and love to travel, but your plants roots you home?</li>
-                    <li>You like plants but dont remember to water them?</li>
+                    <li>Do you want to eat Healthy food without GMO, BCO, UFO and other Abbreviations that YOU dont know
+                        the meaning?</li>
+                    <li>Do you want to grow a plant but have no experience whatsoever?</li>
+                    <li>Have you already tried and killed several poor little plants before?</li>
+                    <li>Do you already have a plant or a grow, but it takes so much of your time?</li>
+                    <li>Are you a free spirit and love to travel, but your plants roots you at home?</li>
+                    <li>Do you like plants, but never remember to water them?</li>
                     <li>You are a geek and want to analize the data from your plants?</li>
                 </ul>
                 <div class="ans">
@@ -93,16 +93,16 @@
                     </li>
                     <li>Access data online wherever you are
                         <ul>
-                            <li>The box Has connection to wi-fi so you can check how is you plant:</li>
+                            <li>The box has wi-fi connection so you can check how is you plant doing</li>
                             <li>The sensors update every minute </li>
                             <li>All data is recorded so you can analize if you want</li>
                         </ul>
                     </li>
                     <li>Automate the irrigation process
                         <ul>
-                            <li>The box can water your plant exactly when it need</li>
-                            <li>Based on the readings the box can pum water from the reservoir</li>
-                            <li>Your job is only to fill the reservoir when its empty, once a month</li>
+                            <li>The box can water your plant exactly when it needed</li>
+                            <li>Based on the readings the box can plum water from the reservoir</li>
+                            <li>Your only job is to fill the reservoir when its empty, once a month</li>
                         </ul>
                     </li>
                     
