contact css part created

--- a/pages/about.html
+++ b/pages/about.html
@@ -43,17 +43,22 @@
                         <figcaption>Prototype for Arduino class</figcaption>
                     </figure>
                 </div>
-                <div class="col col70">
+                <div class="col col70 textBox">
                     <p>
                         The grow Box project is a way of helping people to grow heath food indoors. Even if someone
                         don’t have a lot of time or skills in this area.
                         As well as to improve the yields of an experienced grower by giving the important information
                         they need to take action.
-
+                    </p>
+                    <br>
+                    <p>
                         The project its a system that monitor important aspects of a plant cycle life. Showing to the
                         user in a simple and organized way. So, you have a precise way of knowing how well your crop is
                         going. You can see the humidity of the air, the moisture of the soil, temperature, and how much
                         light the plant is having.
+                    </p>
+                        <br>
+                    <p>
                         Those are the most important parameters in any plant life.
                         For those with more interesting in deep understand, all data generated is recorded in a database
                         and its available online to the users.
