--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,13 +31,13 @@
     <main>
         
         <section class="sectionContact">
-            <h1>Contact</h1>
+            <!-- <h1>Contact</h1> -->
 
             <div class="flexContainer">
                 <div class="col col50">
                     <form id="signUp" class="formSignUp" method="GET" action="">
                         <legend>Subscribe</legend>
-                        <ul class="form-wrap">
+                        <ul class="form-wrap" id=" signUp">
                             <li><label for="fname">Name:</label>
                                 <input type="text" name="fname" id="fname" required placeholder="First Name">
                             </li>
