--- a/pages/about.html
+++ b/pages/about.html
@@ -33,13 +33,11 @@
     </header>
     <main>
         <section class="sectionAbout">
-            <!-- <div class=""> -->
-            <!-- <h2>About</h2> -->
             <h2>The Grow box project</h2>
             <div class="flexContainer">
                 <div class="col col30">
                     <figure>
-                        <img class="imgProject" src="../img/grow2.jpg" alt="grow Project Arduino" sizes="" srcset="">
+                        <img class="imgProject" src="../img/grow2.jpg" alt="grow Project Arduino" >
                         <figcaption>Prototype for Arduino class</figcaption>
                     </figure>
                 </div>
@@ -64,25 +62,26 @@
                         and its available online to the users.
                         The final resource is the auto pilot mode, you just need to connect the grow Box and the water
                         reservoir and the system will water the plant exactly when needed.
-
                     </p>
                 </div>
-                <!-- <div class="col col30">
-                       The grow Box project is a way of helping people to grow heath food indoors. even if someone dont
-                                    have a lot of time or skils in growing anything.
-                                    The project i
-                    </div> -->
             </div>
-            <!-- </div> row -->
             <div class="">
-                <h3>Technical stuff</h3>
+                <h2>Technical Part</h2>
                 <div class="flexContainer technical">
-                    <div class="col col50">
+                    <div class="col col50 textBox">
                         <p>
                             Created using an Arduino Leonardo and ESP 8266 wi-fi module to send the data to Things speak.
                             The data is collected from Arduino compatible sensors
-    
                         </p>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, ut praesentium. Vero culpa ipsa quam esse, voluptate fuga corporis modi nostrum molestiae, eum veniam quo, dolor facilis accusamus saepe et!
+                        </p>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, ut praesentium. Vero culpa ipsa quam esse, voluptate fuga corporis modi nostrum molestiae, eum veniam quo, dolor facilis accusamus saepe et!
+                        </p>
+            
                     </div>
                     <div class="col col50">
                         <div>
@@ -101,7 +100,6 @@
                                 <li>5 Liters water reservoir</li>
                             </ul>
                         </div>
-
                     </div>
                 </div>
             </div> <!-- row-->
