--- a/pages/order.html
+++ b/pages/order.html
@@ -28,11 +28,9 @@
             <h2>Make your order</h2>
             <a class="button ">Lorem</a>
         </div>
-
     </header>
     <main>
-
-        <section class="sectionOrder">
+        <section class="">
             <div class="orderContent">
                 <div class="orderHeader">
                     <h3 class="block ">The Grow box</h3>
@@ -62,12 +60,12 @@
                             <div class="formOrder">
                                 <h4>Choose a Model</h4>
                                 <div>
-                                    <input type="checkbox" name="tipe1" id="tipe1">
-                                    <label for="tipe1">Model 1 </label>
+                                    <input type="checkbox" name="" id="">
+                                    <label for="">Model 1 </label>
                                 </div>
                                 <div>
-                                    <input type="checkbox" name="tipe" id="">
-                                    <label for="tipe">Model 2</label>
+                                    <input type="checkbox" name="t" id="">
+                                    <label for="">Model 2</label>
                                 </div>
                                 <div class="quantityDiv">
                                     <label for="quantity">Quantity:</label>
@@ -85,14 +83,13 @@
                                     <p>x $399.00</p>
                                 </div>
                                 <div>
-                                    <input class="button orderButton" type="button" value="Order">
+                                    <input class="button orderButton" type="butto" value="Order">
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-
         </section>
         <!-- <h1>Order</h1> -->
 
