refactoring css + add normalize

--- a/pages/order.html
+++ b/pages/order.html
@@ -7,6 +7,7 @@
     <title>The Grow Box Project</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/navBar.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -35,7 +36,7 @@
                 <div class="orderHeader">
                     <h3 class="block ">The Grow box</h3>
                     <!-- <p class="block">Price</p> -->
-                    <a class="button orderButton">Buy</a>
+                    <a class="button orderButton">Order</a>
                 </div>
                 <figure>
                     <img src="../img/growPresentation.jpg" alt="The grow Project">
@@ -83,7 +84,8 @@
                                     <p>x $399.00</p>
                                 </div>
                                 <div>
-                                    <input class="button orderButton" type="butto" value="Order">
+                                    <!-- <input type="button" value="Order"> -->
+                                    <a class="button orderButton"href=""> Order</a>
                                 </div>
                             </div>
                         </form>
@@ -91,14 +93,6 @@
                 </div>
             </div>
         </section>
-        <!-- <h1>Order</h1> -->
-
-        <!-- product info selection -->
-        <!-- displau price, chose quantity, delivery shippimnent?, -->
-        <!-- open personal an dbliling info -->
-        <!-- personal info -->
-
-
         <section class="deliveryForm">
             <!-- <h2>Make your order</h2> -->
             <form id="order" method="GET" action="">
@@ -147,7 +141,6 @@
     </main>
     <footer class="mainFooter">
         <p>Developed by <a href="https://www.linkedin.com/in/andre--tavares" target="_blank">Andre Tavares</a> </p>
-        <!-- <a href="https://www.linkedin.com/in/andre--tavares" target="_blank" ><i class="fa fa-linkedin"></i></a> -->
     </footer>
     <script src="../js/script.js"></script>
 </body>
