--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/461864901a.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="css/navBar.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
