--- a/pages/order.html
+++ b/pages/order.html
@@ -27,7 +27,7 @@
         <div>
             <h1>Reserve</h1>
             <h2>Make your order</h2>
-            <a class="button ">Lorem</a>
+            <!-- <a class="button ">Lorem</a> -->
         </div>
     </header>
     <main>
