--- a/pages/system.html
+++ b/pages/system.html
@@ -38,7 +38,7 @@
                 <div class="flexContainer">
                     <div class="col col30">
                         <figure>
-                            <img class="imgProject" src="../img/growPresentation.jpg" alt="grow Project Arduino" sizes="" srcset="">
+                            <img class="imgProject" src="../img/grow4.jpg" alt="grow Project Arduino" sizes="" srcset="">
                             <figcaption>Presentation of prototype for Arduino class</figcaption>
                         </figure>
                     </div>
