--- a/pages/order.html
+++ b/pages/order.html
@@ -20,7 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="order.html" class="active">Order</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="system.html">System</a></li>
+                <!-- <li><a href="system.html">System</a></li> -->
                 <li><a href="javascript:void(0)" class="icon" onclick="toggle()"> <i class="fa fa-bars"></i></a></li>
             </ul>
         </nav>
@@ -93,8 +93,8 @@
                 </div>
             </div>
         </section>
-        <section class="deliveryForm">
-            <!-- <h2>Make your order</h2> -->
+        <!-- <section class="deliveryForm">
+
             <form id="order" method="GET" action="">
                 <legend>Delivery Information</legend>
                 <ul class="form-wrap">
@@ -132,11 +132,11 @@
                     </li>
                     <li>
                         <button>Confirm</button>
-                        <!-- <input class="butt" type="button" value="Confirm"> -->
+  
                     </li>
                 </ul>
             </form>
-        </section>
+        </section> -->
         <!-- biling info -->
     </main>
     <footer class="mainFooter">
