--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="order.html">Order</a></li>
                 <li><a href="contact.html"class="active">Contact</a></li>
-                <li><a href="system.html">System</a></li>
+                <!-- <li><a href="system.html">System</a></li> -->
                 <li><a href="javascript:void(0)" class = "icon" onclick="toggle()"> <i class="fa fa-bars"></i></a></li>
             </ul>
         </nav>
